Make loading the kotlinc repository lazy * Also, cleanup the imports of libraries to be easier to reason about. * .klib remains an open question. Will need ot address in the near future. fixes 1106

--- a/src/main/starlark/core/repositories/BUILD.kotlin_capabilities.bazel
+++ b/src/main/starlark/core/repositories/BUILD.kotlin_capabilities.bazel
@@ -11,34 +11,25 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
-load("//src/main/starlark/release:packager.bzl", "release_archive")
+package(default_visibility = ["//visibility:public"])
 
-release_archive(
-    name = "pkg",
-    srcs = [
-        "BUILD.com_github_google_ksp.bazel",
-        "BUILD.com_github_jetbrains_kotlin.bazel",
-        "bzlmod_impl.bzl",
-        "compiler.bzl",
-        "ksp.bzl",
-        "versions.bzl",
-    ],
-    src_map = {
-        "initialize.release.bzl": "initialize.bzl",
-        "BUILD.release.bazel": "BUILD.bazel",
-        "bzlmod_setup.release.bzl": "bzlmod_setup.bzl",
-    },
-    deps = [
-        "//src/main/starlark/core/repositories/kotlin:pkg",
-    ],
-)
+load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
+load(":artifacts.bzl", "KOTLINC_ARTIFACT_LIST")
 
 bzl_library(
-    name = "repositories",
+    name = "capabilities",
     srcs = glob(["*.bzl"]),
-    visibility = ["//:__subpackages__"],
-    deps = [
-        "@rules_proto//proto:defs",
-    ],
 )
+
+alias(
+    name = "home",
+    actual = "@$git_repo$//:home",
+)
+
+[
+    alias(
+        name = label,
+        actual = "@$git_repo$//:%s" % file.replace(".", "_"),
+    )
+    for (label, file) in KOTLINC_ARTIFACT_LIST.items()
+]
