--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -91,3 +91,5 @@ use_repo(maven, "kotlin_rules_maven", "unpinned_kotlin_rules_maven")
 bazel_dep(name = "rules_pkg", version = "0.7.0")
 bazel_dep(name = "stardoc", version = "0.5.6", repo_name = "io_bazel_stardoc")
 bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
+
+bazel_dep(name = "rules_testing", version = "0.5.0", dev_dependency = True)
